// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a snapshot summary 1`] = `
"Snapshot Summary
 › 1 snapshot written from 1 test suite.
 › 1 snapshot failed from 1 test suite. Inspect your code changes or press --u to update them.
 › 1 snapshot updated from 1 test suite.
 › 1 snapshot file obsolete from 1 test suite. To remove it, press --u.
 › 1 snapshot obsolete from 1 test suite. To remove it, press --u.
   ↳ ../path/to/suite_one
       • unchecked snapshot 1"
`;

exports[`creates a snapshot summary after an update 1`] = `
"Snapshot Summary
 › 1 snapshot written from 1 test suite.
 › 1 snapshot failed from 1 test suite. Inspect your code changes or press --u to update them.
 › 1 snapshot updated from 1 test suite.
 › 1 snapshot file removed from 1 test suite.
 › 1 snapshot removed from 1 test suite.
   ↳ ../path/to/suite_one
       • unchecked snapshot 1"
`;

exports[`creates a snapshot summary with multiple snapshot being written/updated 1`] = `
"Snapshot Summary
 › 2 snapshots written from 2 test suites.
 › 2 snapshots failed from 2 test suites. Inspect your code changes or press --u to update them.
 › 2 snapshots updated from 2 test suites.
 › 2 snapshot files obsolete from 2 test suites. To remove them all, press --u.
 › 2 snapshots obsolete from 2 test suites. To remove them all, press --u.
   ↳ ../path/to/suite_one
       • unchecked snapshot 1
   ↳ ../path/to/suite_two
       • unchecked snapshot 2"
`;

exports[`returns nothing if there are no updates 1`] = `"Snapshot Summary"`;
